src/test/resources/valid/alpha/ALPHA.cpy
           05 EMP-SURNAME PIC XX.
           05 EMP-POSITION PIC X.