src/test/resources/invalid/numeric/NUMINV.cpy
       01 EMP-RECORD.
           05 EMP-NAME PI 99.
           05 EMP-SURNAME PIC XX.
           05 EMP-POSITION PIC X.